fix: gap on right side of screen
when I had made changes to the layout of the code,
in the mobile breakpoint there was a gap on the right side
of the screen you can scroll over. Made a few changes to css style

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,15 @@
 @charset "utf-8";
 /* CSS Document */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -106,9 +115,11 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
+	padding-top: 8 px;
+	padding-bottom: 8 px;
 }
 .filter-options h2 {
   color: white;
@@ -116,6 +127,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+	padding-top: 10px;
 }
 .filter-options select {
   background-color: white;
@@ -136,6 +148,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,7 +160,8 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 80%;
+	max-width: 600px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -154,6 +170,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+	max-height: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -203,9 +220,10 @@ nav h1 a {
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
+
   position: absolute;
-  width: 50%;
+	width: calc(50% - 80px);
+  padding: 25px 40px;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +236,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	max-width: 90%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,7 +252,10 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	max-width: 90%;
+}
+#restaurant-hours {
+	display: block;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
@@ -255,6 +276,8 @@ nav h1 a {
 #reviews-list {
   margin: 0;
   padding: 0;
+	display: flex;
+	flex-direction: column;
 }
 #reviews-list li {
   background-color: #fff;
@@ -265,7 +288,7 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 70%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
